# UdacityRoboticsSoftwareEngineer

./: localization.launch  mapping.launch
Robotics Software Engineer P1/: CMakeLists.txt
Robotics Software Engineer P1/model/building_model/: model.config  model.sdf
Robotics Software Engineer P1/model/robot_model/: model.config  model.sdf
Robotics Software Engineer P1/script/: nicholas_initializer.cpp
Robotics Software Engineer P1/world/: nicholas_simulation.world
Robotics Software Engineer P2/Project2/ball_chaser/src/: drive_bot.cpp  process_image.cpp
Robotics Software Engineer P3/catkin_ws/src/my_robot/: CMakeLists.txt
Robotics Software Engineer P4/catkin_ws/src/ball_chaser/: CMakeLists.txt  package.xml
Robotics Software Engineer P4/catkin_ws/src/ball_chaser/launch/: ball_chaser.launch
Robotics Software Engineer P4/catkin_ws/src/my_robot/: package.xml
Robotics Software Engineer P4/catkin_ws/src/my_robot/config/: base_local_planner_params.yaml  costmap_common_params.yaml
Robotics Software Engineer P4/catkin_ws/src/my_robot/launch/: amcl.launch  localization.launch  mapping.launch  robot_description.launch  world.launch
Robotics Software Engineer P4/catkin_ws/src/my_robot/urdf/: my_robot.gazebo
Robotics Software Engineer P4/catkin_ws/src/pgm_map_creator/: CMakeLists.txt  package.xml
Robotics Software Engineer P4/catkin_ws/src/pgm_map_creator/msgs/: CMakeLists.txt
Robotics Software Engineer P4/catkin_ws/src/teleop_twist_keyboard/: CMakeLists.txt
Robotics Software Engineer P5/catkin_ws/src/add_markers/: CMakeLists.txt  package.xml
Robotics Software Engineer P5/catkin_ws/src/add_markers/launch/: amcl.launch  view_home_service_navigation.launch
Robotics Software Engineer P5/catkin_ws/src/add_markers/src/: add_markers.cpp
Robotics Software Engineer P5/catkin_ws/src/map/: TB3_WORLD.pgm  TB3_WORLD.yaml
Robotics Software Engineer P5/catkin_ws/src/pick_objects/: CMakeLists.txt  package.xml
Robotics Software Engineer P5/catkin_ws/src/pick_objects/src/: pick_objects.cpp
Robotics Software Engineer P5/catkin_ws/src/scripts/: add_marker.sh  home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
