<?xml version="1.0"?>
<package>
  <name>my_robot</name>
  <version>1.0.0</version>

  <description>
    Robot description package for a Gazebo-based mobile robot simulation developed by Nicholas.
  </description>

  <maintainer email="nicholashoishere@gmail.com">Nicholas</maintainer>
  <license>MIT</license>

  <author email="nicholashoishere@gmail.com">Nicholas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>
</package>