<?xml version="1.0"?>
<package format="2">
  <name>add_markers</name>
  <version>0.0.0</version>
  <description>The add_markers package</description>

  <maintainer email="nicholashoishere@gmail.com">Nicholas Ho</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>

  <export/>
</package>