<?xml version="1.0"?>
<package format="2">
  <name>pick_objects</name>
  <version>0.0.0</version>
  <description>The pick_objects package</description>

  <maintainer email="nicholashoishere@gmail.com">Nicholas Ho</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>roscpp</depend>

  <export/>
</package>